{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 1534,
  "lineage": "887665b1-6292-a656-1e89-a7a52d7f827e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/BackLoadBalancer/frontendIPConfigurations/privateIPLB",
                "load_balancer_rules": [
                  "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/BackLoadBalancer/loadBalancingRules/BLBRule"
                ],
                "name": "privateIPLB",
                "private_ip_address": "10.0.2.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/virtualNetworks/wta-vnet/subnets/private-subnet"
              }
            ],
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/BackLoadBalancer",
            "location": "northeurope",
            "name": "BackLoadBalancer",
            "private_ip_address": "10.0.2.10",
            "private_ip_addresses": [
              "10.0.2.10"
            ],
            "resource_group_name": "wta-tr",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.PrivateSN",
            "azurerm_virtual_network.vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/FrontLoadBalancer/frontendIPConfigurations/LBPublicIPAddress",
                "load_balancer_rules": [
                  "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/FrontLoadBalancer/loadBalancingRules/LBRule"
                ],
                "name": "LBPublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/publicIPAddresses/lb-front-lb"
              }
            ],
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/FrontLoadBalancer",
            "location": "northeurope",
            "name": "FrontLoadBalancer",
            "resource_group_name": "wta-tr",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_public_ip.lb_front_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "back_lb_back_pool_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkInterfaces/nic-vm-4/ipConfigurations/internalVM4",
              "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkInterfaces/nic-vm-5/ipConfigurations/internalVM5"
            ],
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/BackLoadBalancer/backendAddressPools/BLBBackendPool",
            "load_balancing_rules": [
              "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/BackLoadBalancer/loadBalancingRules/BLBRule"
            ],
            "loadbalancer_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/BackLoadBalancer",
            "name": "BLBBackendPool",
            "resource_group_name": "wta-tr"
          },
          "dependencies": [
            "azurerm_lb.lb_back",
            "azurerm_resource_group.rg",
            "azurerm_subnet.PrivateSN",
            "azurerm_virtual_network.vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "lb_back_pool_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkInterfaces/wta-vm2-nic/ipConfigurations/internalVM2",
              "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkInterfaces/wta-vm1-nic/ipConfigurations/internalVM1"
            ],
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/FrontLoadBalancer/backendAddressPools/BackendPool",
            "load_balancing_rules": [
              "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/FrontLoadBalancer/loadBalancingRules/LBRule"
            ],
            "loadbalancer_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/FrontLoadBalancer",
            "name": "BackendPool",
            "resource_group_name": "wta-tr"
          },
          "dependencies": [
            "azurerm_lb.lb_front",
            "azurerm_public_ip.lb_front_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "back_lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/BackLoadBalancer/probes/health-probe-blb",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/BackLoadBalancer/loadBalancingRules/BLBRule"
            ],
            "loadbalancer_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/BackLoadBalancer",
            "name": "health-probe-blb",
            "number_of_probes": 2,
            "port": 5432,
            "protocol": "Tcp",
            "resource_group_name": "wta-tr"
          },
          "dependencies": [
            "azurerm_lb.lb_back",
            "azurerm_resource_group.rg",
            "azurerm_subnet.PrivateSN",
            "azurerm_virtual_network.vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "front_lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/FrontLoadBalancer/probes/front-probe-lb",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/FrontLoadBalancer/loadBalancingRules/LBRule"
            ],
            "loadbalancer_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/FrontLoadBalancer",
            "name": "front-probe-lb",
            "number_of_probes": 2,
            "port": 8080,
            "protocol": "Tcp",
            "resource_group_name": "wta-tr"
          },
          "dependencies": [
            "azurerm_lb.lb_front",
            "azurerm_public_ip.lb_front_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "BackLBRule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/BackLoadBalancer/backendAddressPools/BLBBackendPool",
            "backend_port": 5432,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/BackLoadBalancer/frontendIPConfigurations/privateIPLB",
            "frontend_ip_configuration_name": "privateIPLB",
            "frontend_port": 5432,
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/BackLoadBalancer/loadBalancingRules/BLBRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/BackLoadBalancer",
            "name": "BLBRule",
            "probe_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/BackLoadBalancer/probes/health-probe-blb",
            "protocol": "Tcp",
            "resource_group_name": "wta-tr"
          },
          "dependencies": [
            "azurerm_lb.lb_back",
            "azurerm_lb_backend_address_pool.back_lb_back_pool_address",
            "azurerm_lb_probe.back_lb_probe",
            "azurerm_resource_group.rg",
            "azurerm_subnet.PrivateSN",
            "azurerm_virtual_network.vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "FrontLBRule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/FrontLoadBalancer/backendAddressPools/BackendPool",
            "backend_port": 8080,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/FrontLoadBalancer/frontendIPConfigurations/LBPublicIPAddress",
            "frontend_ip_configuration_name": "LBPublicIPAddress",
            "frontend_port": 8080,
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/FrontLoadBalancer/loadBalancingRules/LBRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/FrontLoadBalancer",
            "name": "LBRule",
            "probe_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/FrontLoadBalancer/probes/front-probe-lb",
            "protocol": "Tcp",
            "resource_group_name": "wta-tr"
          },
          "dependencies": [
            "azurerm_lb.lb_front",
            "azurerm_lb_backend_address_pool.lb_back_pool_address",
            "azurerm_lb_probe.front_lb_probe",
            "azurerm_public_ip.lb_front_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "NatG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/natGateways/nat-Gateway",
            "idle_timeout_in_minutes": 10,
            "location": "northeurope",
            "name": "nat-Gateway",
            "resource_group_name": "wta-tr",
            "resource_guid": "ecd4a879-4b13-434e-86b1-3c20b4edcbde",
            "sku_name": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "nat_ip_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/natGateways/nat-Gateway|/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/publicIPAddresses/nat-public-ip",
            "nat_gateway_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/natGateways/nat-Gateway",
            "public_ip_address_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/publicIPAddresses/nat-public-ip"
          },
          "dependencies": [
            "azurerm_nat_gateway.NatG",
            "azurerm_public_ip.nat_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkInterfaces/wta-vm1-nic",
            "internal_domain_name_suffix": "z2hxyjxq33luvegt24rznj0b1b.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internalVM1",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/virtualNetworks/wta-vnet/subnets/public-subnet"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-0D-3A-B5-09-95",
            "name": "wta-vm1-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "wta-tr",
            "virtual_machine_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Compute/virtualMachines/wta-public-vm1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.PublicSN",
            "azurerm_virtual_network.vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkInterfaces/wta-vm2-nic",
            "internal_domain_name_suffix": "z2hxyjxq33luvegt24rznj0b1b.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internalVM2",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/virtualNetworks/wta-vnet/subnets/public-subnet"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-0D-3A-B5-06-B6",
            "name": "wta-vm2-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "wta-tr",
            "virtual_machine_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Compute/virtualMachines/wta-public-vm2"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.PublicSN",
            "azurerm_virtual_network.vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkInterfaces/nic-vm-4",
            "internal_domain_name_suffix": "z2hxyjxq33luvegt24rznj0b1b.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internalVM4",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/virtualNetworks/wta-vnet/subnets/private-subnet"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-0D-3A-B5-01-61",
            "name": "nic-vm-4",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "wta-tr",
            "virtual_machine_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Compute/virtualMachines/vm4-db"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.PrivateSN",
            "azurerm_virtual_network.vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkInterfaces/nic-vm-5",
            "internal_domain_name_suffix": "z2hxyjxq33luvegt24rznj0b1b.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internalVM5",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/virtualNetworks/wta-vnet/subnets/private-subnet"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-0D-3A-B5-08-A5",
            "name": "nic-vm-5",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "wta-tr",
            "virtual_machine_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Compute/virtualMachines/vm5-db"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.PrivateSN",
            "azurerm_virtual_network.vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "vm1-nic-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/FrontLoadBalancer/backendAddressPools/BackendPool",
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkInterfaces/wta-vm1-nic/ipConfigurations/internalVM1|/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/FrontLoadBalancer/backendAddressPools/BackendPool",
            "ip_configuration_name": "internalVM1",
            "network_interface_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkInterfaces/wta-vm1-nic"
          },
          "dependencies": [
            "azurerm_lb.lb_front",
            "azurerm_lb_backend_address_pool.lb_back_pool_address",
            "azurerm_network_interface.nic_vm_1",
            "azurerm_public_ip.lb_front_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.PublicSN",
            "azurerm_virtual_network.vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "vm2-nic-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/FrontLoadBalancer/backendAddressPools/BackendPool",
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkInterfaces/wta-vm2-nic/ipConfigurations/internalVM2|/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/FrontLoadBalancer/backendAddressPools/BackendPool",
            "ip_configuration_name": "internalVM2",
            "network_interface_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkInterfaces/wta-vm2-nic"
          },
          "dependencies": [
            "azurerm_lb.lb_front",
            "azurerm_lb_backend_address_pool.lb_back_pool_address",
            "azurerm_network_interface.nic_vm_2",
            "azurerm_public_ip.lb_front_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.PublicSN",
            "azurerm_virtual_network.vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "vm4-nic-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/BackLoadBalancer/backendAddressPools/BLBBackendPool",
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkInterfaces/nic-vm-4/ipConfigurations/internalVM4|/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/BackLoadBalancer/backendAddressPools/BLBBackendPool",
            "ip_configuration_name": "internalVM4",
            "network_interface_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkInterfaces/nic-vm-4"
          },
          "dependencies": [
            "azurerm_lb.lb_back",
            "azurerm_lb_backend_address_pool.back_lb_back_pool_address",
            "azurerm_network_interface.nic_vm_4",
            "azurerm_resource_group.rg",
            "azurerm_subnet.PrivateSN",
            "azurerm_virtual_network.vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "vm5-nic-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/BackLoadBalancer/backendAddressPools/BLBBackendPool",
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkInterfaces/nic-vm-5/ipConfigurations/internalVM5|/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/loadBalancers/BackLoadBalancer/backendAddressPools/BLBBackendPool",
            "ip_configuration_name": "internalVM5",
            "network_interface_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkInterfaces/nic-vm-5"
          },
          "dependencies": [
            "azurerm_lb.lb_back",
            "azurerm_lb_backend_address_pool.back_lb_back_pool_address",
            "azurerm_network_interface.nic_vm_5",
            "azurerm_resource_group.rg",
            "azurerm_subnet.PrivateSN",
            "azurerm_virtual_network.vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkSecurityGroups/private-nsg",
            "location": "northeurope",
            "name": "private-nsg",
            "resource_group_name": "wta-tr",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "22_ruleO",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "22",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "5432_rule",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "5432",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkSecurityGroups/public-nsg",
            "location": "northeurope",
            "name": "public-nsg",
            "resource_group_name": "wta-tr",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule_22",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "8080",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Port_8080",
                "priority": 120,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb_front_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/publicIPAddresses/lb-front-lb",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.142.125.166",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "lb-front-lb",
            "resource_group_name": "wta-tr",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/publicIPAddresses/nat-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.142.125.174",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "nat-public-ip",
            "resource_group_name": "wta-tr",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "PrivateSN",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/virtualNetworks/wta-vnet/subnets/private-subnet",
            "name": "private-subnet",
            "resource_group_name": "wta-tr",
            "virtual_network_name": "wta-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "PublicSN",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/virtualNetworks/wta-vnet/subnets/public-subnet",
            "name": "public-subnet",
            "resource_group_name": "wta-tr",
            "virtual_network_name": "wta-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "AssocPrivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/virtualNetworks/wta-vnet/subnets/private-subnet",
            "nat_gateway_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/natGateways/nat-Gateway",
            "subnet_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/virtualNetworks/wta-vnet/subnets/private-subnet"
          },
          "dependencies": [
            "azurerm_nat_gateway.NatG",
            "azurerm_resource_group.rg",
            "azurerm_subnet.PrivateSN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "AssocPublic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/virtualNetworks/wta-vnet/subnets/public-subnet",
            "nat_gateway_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/natGateways/nat-Gateway",
            "subnet_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/virtualNetworks/wta-vnet/subnets/public-subnet"
          },
          "dependencies": [
            "azurerm_nat_gateway.NatG",
            "azurerm_resource_group.rg",
            "azurerm_subnet.PublicSN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/virtualNetworks/wta-vnet/subnets/private-subnet",
            "network_security_group_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkSecurityGroups/private-nsg",
            "subnet_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/virtualNetworks/wta-vnet/subnets/private-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.PrivateSN",
            "azurerm_virtual_network.vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/virtualNetworks/wta-vnet/subnets/public-subnet",
            "network_security_group_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkSecurityGroups/public-nsg",
            "subnet_id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/virtualNetworks/wta-vnet/subnets/public-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.public_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.PublicSN",
            "azurerm_virtual_network.vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vNet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "267c0fcf-eff0-4a57-90d3-e7a396a741d9",
            "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/virtualNetworks/wta-vnet",
            "location": "northeurope",
            "name": "wta-vnet",
            "resource_group_name": "wta-tr",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/virtualNetworks/wta-vnet/subnets/public-subnet",
                "name": "public-subnet",
                "security_group": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkSecurityGroups/public-nsg"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/virtualNetworks/wta-vnet/subnets/private-subnet",
                "name": "private-subnet",
                "security_group": "/subscriptions/d633ade9-7a93-4e14-85f7-145bf18bc5c6/resourceGroups/wta-tr/providers/Microsoft.Network/networkSecurityGroups/private-nsg"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}